nknipfe2/mp7/grade_report_final.txt
Grading r60409 by nknipfe2 committed on Tue Dec  6 22:24:41 CST 2016
Monad Autograder
Testing mp7 at 2016-12-07 01:12:42

"Hulp -> Wat is dit?" ~ LibreOffice Impress

Setting up test environment...
Compiling...
================================================================
maze.cpp:33:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
maze.cpp:46:7: error: use of undeclared identifier 'bottomwall'
      bottomwall[tmp]=exists;
      ^
1 warning and 1 error generated.
make: *** [maze.o] Error 1
make: *** Waiting for unfinished jobs....


Running tests...
================================================================
Could not execute test cases


Total score...
================================================================
TOTAL SCORE: 0

